--- a/bio.html
+++ b/bio.html
@@ -12,7 +12,7 @@
     <body>
 
         <header class="header">
-  <div class="logo">HERO RYAN GOSLING</div>
+  <div class="logo"><a href="https://youtu.be/-DSVDcw6iW8?si=5s2OMmMDdsqFySLn">HERO RYAN GOSLING</a></div>
 
   <input type="checkbox" id="menu-toggle">
 
